--- a/nginx-proxy/nginx.tmpl
+++ b/nginx-proxy/nginx.tmpl
@@ -126,7 +126,7 @@ proxy_http_version 1.1;
 proxy_buffering off;
 proxy_read_timeout  36000s;
 proxy_send_timeout  36000s;
-proxy_set_header Host $http_host;
+proxy_set_header Host $host;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection $proxy_connection;
 proxy_set_header X-Real-IP $remote_addr;
