--- a/nginx-proxy/nginx.tmpl
+++ b/nginx-proxy/nginx.tmpl
@@ -1,7 +1,10 @@
 {{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
 
 {{ define "upstream" }}
-	{{ if .Address }}
+	{{ if and .IP .Port }}
+		# {{ .Container.Name }} with manually set IP
+		server {{ .IP }}:{{ .Port }};
+	{{ else if .Address }}
 		{{/* If we got the containers from swarm and this container's port is published to host, use host IP:PORT */}}
 		{{ if and .Container.Node.ID .Address.HostPort }}
 			# {{ .Container.Node.Name }}/{{ .Container.Name }}
@@ -178,9 +181,14 @@ upstream {{ $upstream_name }} {
 
 {{ range $container := $containers }}
 	{{ $addrLen := len $container.Addresses }}
-
-	{{ range $knownNetwork := $CurrentContainer.Networks }}
-		{{ range $containerNetwork := $container.Networks }}
+	{{ if and $container.Env.VIRTUAL_IP $container.Env.VIRTUAL_HOST }}
+		# Manually defined upstream host and port
+		{{ $IP := coalesce $container.Env.VIRTUAL_IP "127.0.0.1" }}
+		{{ $Port := coalesce $container.Env.VIRTUAL_PORT "80" }}
+		{{ template "upstream" (dict "Container" $container "Port" $Port "IP" $IP) }}
+	{{ else }}
+		{{ range $knownNetwork := $CurrentContainer.Networks }}
+			{{ range $containerNetwork := $container.Networks }}
 			{{ if (and (ne $containerNetwork.Name "ingress") (or (eq $knownNetwork.Name $containerNetwork.Name) (eq $knownNetwork.Name "host"))) }}
 				## Can be connected with "{{ $containerNetwork.Name }}" network
 
@@ -188,7 +196,7 @@ upstream {{ $upstream_name }} {
 				{{ if eq $addrLen 1 }}
 					{{ $address := index $container.Addresses 0 }}
 					{{ template "upstream" (dict "Container" $container "Address" $address "Network" $containerNetwork) }}
-				{{/* If more than one port exposed, use the one matching VIRTUAL_PORT env var, falling back to standard web port 80 */}}
+					{{/* If more than one port exposed, use the one matching VIRTUAL_PORT env var, falling back to standard web port 80 */}}
 				{{ else }}
 					{{ $port := coalesce $container.Env.VIRTUAL_PORT "80" }}
 					{{ $address := where $container.Addresses "Port" $port | first }}
